--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.7"
-dirs = "3.0"
-rocket_cors = "0.5.1"
+[dependencies.mongodb]
+version = "1.1.1"
+default-features = false
+features = ["sync"]
