--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.7"
+json = "0.12.4"
 [dependencies.mongodb]
 version = "1.1.1"
 default-features = false
