--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8"
+rand_hc = "0.3"
 rocket = "0.4.7"
 json = "0.12.4"
 [dependencies.mongodb]
