Frontend ready for deployment + updated dockerfiles

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node app.js",
+    "serve": "node app.js",
     "nodemon": "nodemon app.js"
   },
   "keywords": [],
