--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,5 +10,9 @@
     "webpack": "^4.29.4",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.0"
+  },
+  "dependencies": {
+    "css-loader": "^5.2.0",
+    "style-loader": "^2.0.0"
   }
 }
